--- a/src/main/resources/templates/se/customer/join.html
+++ b/src/main/resources/templates/se/customer/join.html
@@ -31,7 +31,7 @@
                 <input type="password" name="pw2" placeholder="암호확인" value="se" onkeyup="PwCheck(this)"><br>
                 <label id="pwcheck">비밀번호 중복확인</label>
                 <input type="text" name="name" placeholder="이름" value="이름"><br>
-                <input type="tel" name="phone" placeholder="핸드폰번호" value="01053535353"><br>
+                <input type="tel" name="phone" placeholder="연락처" value="01053535353"><br>
                 <input type="email" name="email" placeholder="이메일" value="e@emial.com"><br>
                 <input type="text" name="nickname" placeholder="닉네임" value="닉네임"><br>
                 <input type="radio" name="gender" value="F" checked="checked">F &nbsp;
