--- a/src/main/resources/templates/seller/item/search.html
+++ b/src/main/resources/templates/seller/item/search.html
@@ -293,7 +293,7 @@
             data: {
                 labels: ["남성", "여성"],
                 datasets: [{
-                data: [female, male],
+                data: [male, female],
                 backgroundColor: ['#007bff', '#dc3545'],
                 }],
             },
